v1.8:

 - Added --csv-skiplines, --csv-strictquotes and
   --nocsv-strictquotes

v1.7 (2018-01-20):

 - Added --sort-locale, --tex-encoding and --csv-encoding

 - Import probsoln function now uses texparserlib.jar

 - Removed --shuffle-iterations

 - Improved GUI

v1.6 (2015-09-06):

 - Added --csvescape and --nocsvescape

v1.5:

 - Bug fix in probsoln import and added RedefNewProblem option

v1.4:

 - Extra merge options

v1.3:

 - Added --truncate, --filter-or, --filter-and, --filter-include
   --filter-exclude, --filter options.