@@ -511,6 +511,8 @@ syntax.sort={0} [+|-]<field>\n\t\tSort the database on the column whose label is
 syntax.sort_case_sensitive={0}\tUse case sensitive comparison when sorting strings.
 syntax.sort_case_insensitive={0}\tUse case insensitive comparison when sorting strings.\n\t\t\t(Default.)
 syntax.truncate={0} <n>\tTruncate the database to the first <n> rows.\n\t\t(Has no effect if <n> is greater than the total number of rows.)\n\t\tThis option is always performed last (after any sorting,\n\t\tshuffling and filtering).
+syntax.remove_cols={0} <col-1>,...,<col-n>\tRemove given list of columns (labels or indexes starting from 1).
+syntax.remove_except_cols={0} <col-1>,...,<col-n>\tRemove all columns except those identified (labels or indexes starting from 1).
 syntax.filter_or={0}\tUse ''OR'' operator when filtering. (Default.)
 syntax.filter_and={0}\tUse ''AND'' operator when filtering.
 syntax.filter_include={0}\n\t\tWhen filtering discard rows that don''t match the filter\n\t\tspecifications (and keep those that do match).\n\t\t(Default.)
@@ -584,10 +586,12 @@ error.syntax.missing_password=Password expected after {0} (omit {0} to be prompt
 error.syntax.missing_port=Port number expected after {0}
 error.syntax.missing_encoding=Missing encoding name after {0}
 error.syntax.unknown_encoding=Unknown or invalid encoding name ''{0}''
+error.syntax.missing_arg=Missing argument after {0}
 error.syntax.not_a_number=Number expected after {0} (''{1}'' found)
 error.syntax.unknown_option=Unknown option ''{0}''. (Use --help or -h for help.)
 error.syntax.only_one_input=Only one <datatool file> permitted
 error.syntax.input_clash=<datatool file> can't be used with an import option
+error.syntax.option_clash=Option conflict: can''t specify both {0} and {1}
 error.syntax=Syntax error: {0}
 error.syntax.missing_input=Filename expected after {0}
 error.syntax.missing_number=Number expected after {0}
@@ -606,6 +610,7 @@ error.syntax.syntax.missing_merge_file=Missing merge file after {0} {1}
 error.syntax.syntax.missing_merge_statement=Missing merge SQL statement after {0} {1}
 error.syntax.missing_value=Missing value after {0}
 error.syntax.invalid_compat=Invalid compatibility setting {0}
+error.syntax.invalid_end_range=End index {0} must be less than starting index {1}
 error.cli.no_data=A database must either be loaded or imported when using batch mode.\n(If you want the GUI interface, use the {0} option. See {1} for help.)
 error.cli.no_out={0} <file> required for batch mode.\n(If you want the GUI interface, use the {1} option. See {2} for help.)
 error.output.tex.not_permitted=.tex extension not permitted on output files
@@ -682,6 +687,7 @@ progress.sorting=Sorting
 progress.shuffling=Shuffling
 progress.filtering=Filtering
 progress.truncating=Truncating
+progress.removing_columns=Removing columns
 progress.quick_load_failed=Quick load failed ({0}).\nTrying again with TeX Parser Library.
 progress.confirm.cancel=Cancel current operation?
 progress.confirm.cancel.title=Confirm Abort
