@@ -1,4 +1,4 @@
 #!/usr/bin/bash
 
-datatooltk --nomap-tex-specials --nocsv-escape --sort Field1 --sort-locale en-GB --csv sample-1000x6.csv -o data.dbtex || exit $?
+datatooltk --nomap-tex-specials --nocsv-escape --csv sample-1000x6.csv -o data.dbtex || exit $?
 pdflatex -jobname test-dbtex-1000x6-doc1 test-dbtex-doc
